--- a/style8.css
+++ b/style8.css
@@ -1175,8 +1175,19 @@ transition: height 1s ease-in-out; */
 
 /* --------------------- */
 
-.skill {
-    padding-top: 12rem;
+.sectionHeading {
+    display: inline-block;
+    margin-top: 2px;
+}
+
+.skillsHeading {
+    display: inline-block;
+    padding: 12px 25px;
+    margin: 0;
+    background-color: #45a29e;
+    border-radius: 30px !important;
+    color: #fff;
+    font-size: 2.2rem;
 }
 
 .sk-bar {
@@ -1307,6 +1318,32 @@ transition: height 1s ease-in-out; */
 
 /* skill */
 
+.sectionHeadingWrapper {
+    display: inline-block;
+    align-items: center;
+    justify-content: center;
+    /* center the heading */
+    background-color: #45a29e;
+    padding: 12px 25px;
+    border-radius: 30px;
+    color: #fff;
+    font-size: 2.2rem;
+    margin-bottom: 2rem;
+    /* space between sections */
+}
+
+.sectionHeadingWrapper svg {
+    margin-right: 10px;
+    width: 24px;
+    height: 24px;
+}
+
+.sectionHeading {
+    font-weight: bold;
+    text-transform: uppercase;
+    /* optional: make it uppercase */
+}
+
 
 /* ---------------------- project--------------------- */
 
@@ -1322,16 +1359,29 @@ transition: height 1s ease-in-out; */
     padding-top: 5rem;
 }
 
-.ct-h1 {
-    text-align: center;
+.head {
     color: #66fcf1;
-    font-size: 3rem;
-    /* padding: 5rem; */
-    margin: 10rem 0rem 0rem 0rem;
-    /* margin: 5rem; */
 }
 
-.con-row .contact .contact-info row {
+.contact-heading-wrapper {
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.contactHeading {
+    display: inline-block;
+    padding: 12px 25px;
+    background-color: #45a29e;
+    border-radius: 30px !important;
+    color: #fff;
+    font-size: 2.2rem;
+}
+
+.contactInfo {
+    font-size: 18px;
+}
+
+.con-row .contact .contact-info .row {
     display: flex;
     height: 10rem;
     align-items: center;
@@ -1339,11 +1389,27 @@ transition: height 1s ease-in-out; */
 
 .contact-row {
     padding: 1rem;
+    display: flex;
+    align-items: center;
+    margin-bottom: 1.5rem;
+}
+
+.icon-box {
+    width: 50px;
+    height: 50px;
+    background-color: #66fcf130;
+    /* Light blue or any color you like */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    /* Rounded corners */
+    margin-right: 1rem;
 }
 
 .contact-row i {
-    font-size: 2.8rem;
-    margin-top: 1rem;
+    font-size: 2.2rem;
+    /* margin-top: 1rem; */
     color: #66fcf1;
 }
 
@@ -1356,15 +1422,23 @@ transition: height 1s ease-in-out; */
     margin-left: 2rem;
     color: #c5c6c7;
     font-size: 1.5rem;
+    display: flex;
+    flex-direction: column;
 }
 
 .get-in-touch {
     /* max-width: 80rem; */
-    /* margin: 5rem auto; */
+    margin-top: 3rem;
     position: relative;
     /* box-shadow: 0rem 1rem 3rem 0rem #45A29E; */
     padding: 3rem;
     margin-bottom: 3rem;
+    background: rgba(255, 255, 255, .05);
+    border: 1px solid rgba(255, 255, 255, .15);
+    -webkit-backdrop-filter: blur(16px);
+    backdrop-filter: blur(16px);
+    padding: 35px;
+    border-radius: 16px;
 }
 
 .get-in-touch .title {
@@ -1706,31 +1780,6 @@ transform: translateX(2px);
     /* padding: 20px 0; */
 }
 
-.aboutHeadingText {
-    display: inline-block;
-    padding: 12px 25px;
-    margin: 2rem 0rem;
-    background-color: #45a29e;
-    border-radius: 30px !important;
-    color: #fff;
-    font-size: 2rem;
-    -webkit-border-radius: 30;
-}
-
-.serviceText {
-    display: inline-block;
-    padding: 12px 25px;
-    margin: 0;
-    background-color: #45a29e;
-    border-radius: 30px !important;
-    color: #fff;
-    font-size: 2.2rem;
-    -webkit-border-radius: 30;
-    -moz-border-radius: 30;
-    -ms-border-radius: 30;
-    -o-border-radius: 30;
-}
-
 .dobox-part {
     display: flex;
     justify-content: space-between;
@@ -2043,7 +2092,7 @@ img {
     }
     .aboutMe-ab1 {
         padding: 3rem;
-        width: 65%;
+        width: 70%;
         text-align: justify;
     }
     .aboutMe-ab1 p {
